--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@ _autosave-*
 *-save.kicad_pcb
 fp-info-cache
 
+# Lock files
+~*.lck
+
+# Backup directories
+*-backups/
+
 # Netlist files (exported from Eeschema)
 *.net
 
